# az-upload-folder-to-blob

./: .rgignore  Dockerfile  README.md  pyproject.toml  requirements.txt  upload_folder_to_blobstorage_async.py
app/: main.py
